--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <title></title>
-        <meta charsegitt="UTF-8">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-    
+    <h1>Son</h1>
     </body>
 </html>
